[gd_scene load_steps=24 format=3 uid="uid://di0h5cr8yqw65"]

[ext_resource type="Script" uid="uid://bjboesdd68dqr" path="res://scripts/Player.gd" id="1_auknh"]
[ext_resource type="PackedScene" uid="uid://rwujr72pywjw" path="res://scenes/Sound/random_audio_stream_player.tscn" id="2_qlg0r"]
[ext_resource type="Texture2D" uid="uid://bm7hautwd86fw" path="res://assets/player/character_0004.png" id="2_wtifx"]
[ext_resource type="Texture2D" uid="uid://3068xxywu0iq" path="res://assets/player/character_0005.png" id="3_jmpjo"]
[ext_resource type="AudioStream" uid="uid://6yjr5cqkseiv" path="res://assets/Sounds/Audio/footstep_grass_000.ogg" id="3_y4r1p"]
[ext_resource type="Shader" uid="uid://dhq2bipu4qn8i" path="res://resource/player.gdshader" id="4_058d5"]
[ext_resource type="AudioStream" uid="uid://bwc2aa5vyc3cw" path="res://assets/Sounds/Audio/footstep_grass_001.ogg" id="4_d2wvv"]
[ext_resource type="AudioStream" uid="uid://cl1w78td6o6l" path="res://assets/Sounds/Audio/footstep_grass_002.ogg" id="5_3v2ag"]
[ext_resource type="AudioStream" uid="uid://ba60mbgu1m4is" path="res://assets/Sounds/Audio/footstep_grass_003.ogg" id="6_jej6c"]
[ext_resource type="AudioStream" uid="uid://bkeu0erk4ja7j" path="res://assets/Sounds/Audio/footstep_grass_004.ogg" id="7_f1ej7"]
[ext_resource type="AudioStream" uid="uid://cogs3shmmu4cf" path="res://assets/Sounds/Audio/footstep_concrete_000.ogg" id="8_oprun"]
[ext_resource type="AudioStream" uid="uid://cv8rr2lxjxt4" path="res://assets/Sounds/Audio/footstep_concrete_001.ogg" id="9_a8ls1"]
[ext_resource type="AudioStream" uid="uid://do7yiuc2k5ric" path="res://assets/Sounds/Audio/footstep_concrete_002.ogg" id="10_qfm1y"]
[ext_resource type="AudioStream" uid="uid://b8jf3i6ubeqq4" path="res://assets/Sounds/Audio/footstep_concrete_003.ogg" id="11_fulsm"]
[ext_resource type="AudioStream" uid="uid://fweh5xwheapy" path="res://assets/Sounds/Audio/footstep_concrete_004.ogg" id="12_4r5pv"]
[ext_resource type="AudioStream" uid="uid://bindyjrtsksv8" path="res://assets/Sounds/Audio/impactBell_heavy_004.ogg" id="13_a8ls1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e87xa"]
shader = ExtResource("4_058d5")
shader_parameter/baseColor = Color(1, 0.603922, 0.729412, 1)

[sub_resource type="Curve" id="Curve_2ufky"]
_data = [Vector2(0.029703, 1), 0.0, 0.0, 0, 0, Vector2(0.168317, 1), 0.0, 0.0, 0, 0, Vector2(1, 0.0454545), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8rjyh"]
size = Vector2(14, 8)

[sub_resource type="CircleShape2D" id="CircleShape2D_67ggq"]
radius = 13.4164

[sub_resource type="SpriteFrames" id="SpriteFrames_lcrg1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wtifx")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_jmpjo")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_wtifx")
}, {
"duration": 1.0,
"texture": ExtResource("3_jmpjo")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnoky"]
size = Vector2(12, 17)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vxcf0"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
z_index = 10
collision_layer = 0
script = ExtResource("1_auknh")

[node name="FootStepAudioPlayer" parent="." instance=ExtResource("2_qlg0r")]
numberToPlayer = 3

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("3_y4r1p")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("4_d2wvv")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("5_3v2ag")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("6_jej6c")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("7_f1ej7")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer6" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("8_oprun")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer7" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("9_a8ls1")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer8" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("10_qfm1y")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer9" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("11_fulsm")
volume_db = -2.0
bus = &"Footsteps"

[node name="AudioStreamPlayer10" type="AudioStreamPlayer" parent="FootStepAudioPlayer"]
stream = ExtResource("12_4r5pv")
volume_db = -2.0
bus = &"Footsteps"

[node name="DashAudioPlayer" parent="." instance=ExtResource("2_qlg0r")]
numberToPlayer = 1
enablePitchRandomization = false

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="DashAudioPlayer"]
stream = ExtResource("13_a8ls1")
volume_db = -2.0
bus = &"Dash"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="DashAudioPlayer"]
stream = ExtResource("13_a8ls1")
volume_db = -2.0
bus = &"Dash"

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashParticle" type="CPUParticles2D" parent="."]
show_behind_parent = true
material = SubResource("ShaderMaterial_e87xa")
position = Vector2(0, -12)
emitting = false
amount = 15
texture = ExtResource("2_wtifx")
lifetime = 0.15
gravity = Vector2(0, 0)
scale_amount_curve = SubResource("Curve_2ufky")

[node name="DyingArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 1342177280

[node name="CollisionShape2D" type="CollisionShape2D" parent="DyingArea"]
position = Vector2(0, -12)
scale = Vector2(1, 2.8)
shape = SubResource("RectangleShape2D_8rjyh")

[node name="CoinArea2D" type="Area2D" parent="."]
collision_layer = 2147483648
collision_mask = 2147483648

[node name="CollisionShape2D" type="CollisionShape2D" parent="CoinArea2D"]
position = Vector2(0, -12)
shape = SubResource("CircleShape2D_67ggq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_lcrg1")
animation = &"jump"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -9)
shape = SubResource("RectangleShape2D_qnoky")

[node name="DashArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="DashArea"]
position = Vector2(0, -13)
scale = Vector2(1.31874, 0.839107)
shape = SubResource("CapsuleShape2D_vxcf0")

[node name="WinChecker" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinChecker"]
position = Vector2(0, -13)
scale = Vector2(1.31874, 0.839107)
shape = SubResource("CapsuleShape2D_vxcf0")
